# template-sandbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .woodpecker.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  createtunnel.sh  docker-compose-renovate.yml  docker-compose.yml  environment.yml  frp.ini  haproxy.cfg  mypy.ini  noxfile.py  poetry.lock.license  pyproject.toml  renovate.json  renovate.json.license  ruff.toml  run-renovate.sh  towncrier.toml
.reuse/: dep5
.woodpecker/: .docker.yml  .test.yml
changelog.d/: +determineversionfrompyroject.added.md  +python311env.changed.md  +pythonvers.changed.md  +removebranchfilteringfrompublishtask.fixed.md  +usetowncriertomanagethechangelog.added.md  1.added.md  10.fixed.md  13.added.md  14.added.md  18.added.md  19.added.md  20.added.md  21.fixed.md  23.fixed.md  36.added.md  38.changed.md  62.fixed.md  7.added.md  8.fixed.md  92.fixed.md  93.added.md  98.fixed.md  changelog_template.jinja
docs/: __init__.py  conf.py  index.md  reference.md
src/template_sandbox/: __init__.py  greeter.py
tests/: __init__.py  test_greeter.py
