# SPDX-FileCopyrightText: 2023 The Template-Sandbox Authors
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "template-sandbox"
version = "0.1.0"
description = "Sandbox for creating a reproducible research modern python template. In the future it might become a cookiecutter template."
authors = ["Ricardo Guimarães <rfguimaraes0@gmail.com>"]
readme = "README.md"
# packages = [{include = "template_sandbox"}]

[tool.poetry.dependencies]
python = "~3.9"
conda-lock = "^1.4.0"


[tool.poetry.group.reuse.dependencies]
reuse = "^1.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
pre-commit-hooks = "^4.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
coverage = {extras = ["toml"], version = "^7.2.2"}
pytest-cov = "^4.0.0"
nox = "^2022.11.21"
pytest-mock = "^3.10.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.260"
black = "^23.3.0"
safety = "^2.3.5"


[tool.poetry.group.type.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
template-sandbox = "template_sandbox.greeter:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["template_sandbox"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
target-version = "py39"
